--- a/playbook.yml
+++ b/playbook.yml
@@ -87,4 +87,8 @@
       url: https://wordpress.org/latest.tar.gz 
       dest: /tmp/wordpress.tar.gz
 
-  
+  - name: Extractomundo
+    become: yes
+    unarchive:
+      src: /tmp/wordpress.tar.gz
+      dest: /usr/share/nginx/html/
